[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/chars/prairie_dog.tres.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/chars/prairiedog.png" type="Texture" id=2]
[ext_resource path="res://assets/chars/npc_body.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/chars/NPC.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/prairie_dog2.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/prarie_dog1.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/prarie_dog3.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/footstep_loop.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[node name="prarie_dog" type="Node2D"]
script = ExtResource( 1 )

[node name="animation" type="AnimatedSprite" parent="."]
position = Vector2( 0, 8 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 6 )
animation = "idle"
frame = 2
playing = true

[node name="StaticBody2D" parent="." instance=ExtResource( 3 )]

[node name="NPC" parent="." instance=ExtResource( 4 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="yelp1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -9.0

[node name="yelp2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -9.0

[node name="yelp3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -9.0

[node name="walk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -4.289
pitch_scale = 2.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
